# agent-portal

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  PORTAL_DEMO_SCRIPT.md  README.md  REFACTOR_PLAN.md  claude-bundled-api-reference.md  clippy.toml
archive-format/: Cargo.toml
archive-format/src/: lib.rs  store.rs
archive-viewer/: Cargo.toml  README.md  build.rs
archive-viewer/src/: cat.rs  export.rs  fixture_tests.rs  list.rs  main.rs  rollup.rs  rows.rs  serve.rs  summarize.rs  table.rs
backend/: Cargo.toml
backend/migrations/2026-05-18-000659_add_agent_type_to_messages/: down.sql  up.sql
backend/migrations/2026-05-26-120000_drop_voice_enabled_from_users/: down.sql  up.sql
backend/migrations/2026-05-27-184255_add_turn_metrics/: down.sql  up.sql
backend/migrations/2026-05-28-153000_add_paused_sessions/: down.sql  up.sql
backend/migrations/2026-05-28-170000_reset_sessions_for_db_authority/: down.sql  up.sql
backend/migrations/2026-05-29-143758_drop_unknown_model_turn_metrics/: down.sql  up.sql
backend/migrations/2026-06-02-181500_proxy_tokens_no_expiry/: down.sql  up.sql
backend/migrations/2026-06-04-120000_add_send_mode_to_pending_inputs/: down.sql  up.sql
backend/migrations/2026-06-04-120000_decouple_turn_metrics_from_sessions/: up.sql
backend/migrations/2026-06-04-120001_decouple_turn_metrics_from_sessions/: down.sql  up.sql
backend/migrations/2026-06-04-120002_add_send_mode_to_pending_inputs/: up.sql
backend/migrations/2026-06-10-185127_add_session_continuations/: down.sql  up.sql
backend/migrations/2026-06-15-230000_add_launch_failure_tracking/: down.sql  up.sql
backend/migrations/2026-06-15-230100_revoke_leaked_launch_tokens/: down.sql  up.sql
backend/migrations/2026-06-18-120000_add_launch_lease/: down.sql  up.sql
backend/migrations/2026-06-18-150000_add_open_prs_to_sessions/: down.sql  up.sql
backend/migrations/2026-06-24-231600_add_subagent_tokens_to_turn_metrics/: down.sql  up.sql
backend/migrations/2026-06-25-204200_add_message_provenance_and_clear_history/: down.sql  up.sql
backend/migrations/2026-06-25-204500_add_message_provenance/: down.sql  up.sql
backend/migrations/2026-07-07-190000_add_session_forwards/: down.sql  up.sql
backend/migrations/2026-07-07-210000_one_forward_per_session/: down.sql  up.sql
backend/migrations/2026-07-07-220000_add_public_to_session_forwards/: down.sql  up.sql
backend/migrations/2026-07-07-230000_add_custom_subdomains/: down.sql  up.sql
backend/migrations/2026-07-10-144459_add_client_msg_id_to_pending_inputs/: down.sql  up.sql
backend/migrations/2026-07-11-000000_add_notification_prefs/: down.sql  up.sql
backend/migrations/2026-07-11-050820_add_archived_at_to_sessions/: down.sql  up.sql
backend/migrations/2026-07-11-220545_add_push_subscriptions/: down.sql  up.sql
backend/migrations/2026-07-16-120000_add_reason_to_session_continuations/: down.sql  up.sql
backend/migrations/2026-07-17-224833_add_session_mode_to_scheduled_tasks/: down.sql  up.sql
backend/migrations/2026-07-19-192252_add_last_model_to_sessions/: down.sql  up.sql
backend/migrations/2026-07-21-090000_backfill_session_last_model/: down.sql  up.sql
backend/migrations/2026-07-23-023050_add_launcher_version_to_sessions/: down.sql  up.sql
backend/src/: archive.rs  auth.rs  background.rs  config.rs  db.rs  errors.rs  jwt.rs  lib.rs  main.rs  markers.rs  models.rs  routes.rs  schema.rs  speech.rs  test_support.rs
backend/src/handlers/: admin.rs  admin_subdomains.rs  agent_comms.rs  auth.rs  config.rs  device_flow.rs  downloads.rs  files.rs  forward_proxy.rs  forwards.rs  helpers.rs  images.rs  launchers.rs  media_archive.rs  media_store.rs  messages.rs  mobile_links.rs  mod.rs  privacy.rs  proxy_tokens.rs  push.rs  responses.rs  retention.rs  scheduled_tasks.rs  session_access.rs  sessions.rs  sound_settings.rs  turn_metrics.rs  voice.rs
backend/src/push/: apns.rs  dispatcher.rs  fcm.rs  mod.rs  transport.rs  webpush.rs
backend/tests/: harness.rs
claude-session-lib/: Cargo.toml  portal_reminder.md
claude-session-lib/src/: agent.rs  codex_frame_capture.rs  io_task.rs  lib.rs  output_buffer.rs  session.rs  spawn.rs  transcript.rs
claude-session-lib/src/proxy_session/: git_metadata.rs  mod.rs  (+9 more)
codex-session-lib/: Cargo.toml
codex-session-lib/src/: agent.rs  classifier.rs  events.rs  handler.rs  helpers.rs  io_task.rs  lib.rs
frontend/: Cargo.toml  index.html  katex-helper.js  manifest.webmanifest  sw.js
frontend/dev-tools/: README.md  katex-isolated.html
frontend/lint/: package-lock.json
frontend/src/: audio.rs  health_timer.rs  lib.rs  utils.rs
frontend/styles/: admin.css  base.css  components.css  dashboard.css  demo.css  keyboard.css  markdown.css  messages.css  performance.css  permissions.css  schedule-dialog.css  session-input.css  session-layout.css  session-mobile.css  session-rail.css  session-terminal.css  settings.css  tasks-sidebar.css  tools.css
launcher/: Cargo.toml
launcher/src/: config.rs  connection.rs  forward.rs  main.rs  media.rs  message.rs  pastebin.rs  path_policy.rs  process_manager.rs  scheduler.rs  service.rs  worktree.rs
mobile/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
mobile/status-notification-plugin/: .gitignore  Cargo.toml  build.rs
portal-auth/: Cargo.toml
portal-auth/src/: lib.rs
portal-update/: Cargo.toml
portal-update/src/: lib.rs
proxy/: Cargo.toml
proxy/src/: commands.rs  config.rs  main.rs  session.rs  shim.rs  ui.rs  update.rs  util.rs
session-lib/: Cargo.toml
session-lib/src/: adapter.rs  agent.rs  error.rs  git_metadata.rs  io.rs  lib.rs  output_buffer.rs  probe.rs  session.rs  snapshot.rs  tunnel.rs  turn_tracker.rs
shared/: Cargo.toml  build.rs
shared/src/: api.rs  endpoints.rs  fmt.rs  image_upload.rs  lib.rs  media.rs  message_metadata.rs  model_version.rs  protocol.rs  proxy_tokens.rs  timezone.rs
viewer-frontend/: Cargo.toml  Trunk.toml  index.html
viewer-frontend/src/: api.rs  browser.rs  filters.rs  main.rs  media_rewrite.rs  transcript.rs
viewer-frontend/styles/: viewer.css
(+254 files in other folders)
