[workspace]
members = [
    "shared",
    "backend",
    "frontend",
    "proxy",
    "session-lib",
    "claude-session-lib",
    "codex-session-lib",
    "launcher",
    "portal-auth",
    "portal-update",
    "mobile/src-tauri",
]
exclude = ["mobile/status-notification-plugin"]
resolver = "2"

[workspace.package]
# Only `major.minor` here is meaningful — bump it by hand for a feature/breaking
# release. The patch is a placeholder: the reported version is
# `major.minor.{git commit count}`, derived at build time by `shared/build.rs`
# so no PR ever edits a version line (issue #1096). Runtime version =
# `shared::VERSION`.
version = "2.13.8"
edition = "2021"
authors = ["Matthew Goodman <d3a6d0cec0c16f3e@inboxnegative.com>"]

[workspace.dependencies]
# Async runtime — union of features used across member crates:
#   rt/rt-multi-thread/macros: #[tokio::main], #[tokio::test], spawn, select!
#   sync: mpsc/oneshot channels; time: sleep/timeout/interval
#   process: child process I/O; io-util/io-std: async read/write + stdin/stdout
#   fs: async file ops; net: TcpListener (backend); signal: shutdown handling
tokio = { version = "1.42", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Database
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json", "numeric"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OAuth
oauth2 = "5.0"

# Environment and config
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Claude Code integration
claude-codes = { version = "2.1.161", default-features = false, features = ["types"] }

# Codex CLI integration
codex-codes = { version = "0.143.4", default-features = false, features = ["types"] }

# Web Push (VAPID + RFC8291 encryption). `default-features = false` drops the
# bundled HTTP clients (isahc/libcurl and hyper) — we build the message here and
# POST it over the backend's existing `reqwest` client, so no second HTTP stack
# is added. web-push's ECE crypto (`ece` crate) links openssl, which is already
# the repo's TLS backend (reqwest -> native-tls -> openssl), so no new native
# library is pulled in either. web-push 0.11 offers no rustls/pure-rust crypto
# backend; reusing the existing openssl is the repo-consistent choice.
web-push = { version = "0.11", default-features = false }

# Frontend (Yew)
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
gloo = "0.11"
gloo-net = "0.6"

# Time handling
chrono = { version = "0.4", default-features = false, features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde", "js"] }

# System info
hostname = "0.4"

# Config/data directory discovery
directories = "5.0"

# WebSocket bridge
ws-bridge = "0.2.0"

# Optimize release builds for size (especially important for WASM)
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

# Panic/error policy (#1165 item 8). `unwrap`/`expect` in production code hide
# error context and, in background tasks, die silently. We deny them
# workspace-wide and ratchet existing usage down per crate/module: crates or
# files that still have production unwraps carry a local
# `#![allow(clippy::unwrap_used, expect_used)]` (removed as each is cleaned);
# already-clean crates (portal-auth, portal-update) are enforced today. Tests
# are exempt via clippy.toml (allow-unwrap-in-tests / allow-expect-in-tests).
# Each member crate opts in with `[lints] workspace = true`.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
