[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Shared types
shared = { path = "../shared" }

# Long-term session archive format + read-side store (#1258)
archive-format = { path = "../archive-format" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database - using diesel with postgres
diesel = { workspace = true }
diesel_migrations = "2.2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# OAuth for Google authentication
oauth2 = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
a2 = { version = "0.10.0", default-features = false, features = ["ring", "tracing"] }

# Web Push transport (VAPID + RFC8291); sent over the reqwest client above.
web-push = { workspace = true }

# Environment variables
dotenvy = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Claude Code integration
claude-codes = { workspace = true }

# Time
chrono = { workspace = true, features = ["std", "clock"] }

# UUID
uuid = { workspace = true }


# Secure random for session keys
rand = "0.8"

# JWT for proxy token authentication
jsonwebtoken = "9.3"

# SHA256 for token hashing
sha2 = "0.10"
hex = "0.4"

# WebSocket support
futures-util = "0.3"

# Shared state
dashmap = "6.1"

# Bounded image cache with TTL + LRU eviction (image store)
mini-moka = "0.10"

# CLI arguments
clap = { version = "4.5", features = ["derive"] }
tower-cookies = { version = "0.11", features = ["signed"] }
memory-serve = "2.1"
ws-bridge = { workspace = true, features = ["server"] }
tower_governor = "0.8.0"
governor = "0.10"
base64 = "0.22.1"
hyper = { version = "1.10.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
urlencoding = "2.1.3"
serde_urlencoded = "0.7.1"
zstd = "0.13"
object_store = { version = "0.14.0", features = ["aws"] }

[build-dependencies]
memory-serve = "2.1"

[lints]
workspace = true

[features]
# Exposes `test_support` (shared test pool + canonical `AppState` builder) to
# consumers that link the lib without `cfg(test)` — i.e. the integration-test
# binaries under `tests/`. Off by default, so `cargo build`/release never
# compiles the test scaffolding; only the self dev-dependency below turns it on.
test-support = []

[dev-dependencies]
# Self dev-dependency: enables `test-support` on our own lib for the duration of
# the test build (`cargo test`/`--all-targets`) without leaking it into release.
backend = { path = ".", features = ["test-support"] }
ws-bridge = { workspace = true, features = ["native-client"] }
uuid = { workspace = true }
tempfile = "3"
