[package]
name = "claude-session-lib"
version.workspace = true
edition.workspace = true
description = "Claude Code backend for session-lib (ClaudeAgent + claude_io_task), plus the proxy_session connection loop."
license = "MIT"

[dependencies]
session-lib = { path = "../session-lib" }
shared = { path = "../shared" }
claude-codes = { workspace = true, features = ["async-client"] }
tokio = { workspace = true, features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
thiserror = "1"
tracing = "0.1"
anyhow = { workspace = true }
base64 = "0.22"
directories = "5.0"
hostname = "0.4.2"
which = "8.0.0"
ws-bridge = { workspace = true, features = ["native-client"] }
rand = "0.8"
