[package]
name = "claude-session-lib"
version.workspace = true
edition.workspace = true
description = "Claude Code backend for session-lib (ClaudeAgent + claude_io_task), plus the proxy_session connection loop."
license = "MIT"

[dependencies]
session-lib = { path = "../session-lib" }
shared = { path = "../shared" }
claude-codes = { workspace = true, features = ["async-client"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
chrono-tz = "0.10"
tracing = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"
hostname = { workspace = true }
which = "8.0.0"
ws-bridge = { workspace = true, features = ["native-client"] }
rand = "0.8"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
