[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared types
shared = { path = "../shared" }

# Typed Codex protocol types (no tokio/log/which — WASM-compat).
# Replaces the locally-mirrored CodexItem / FileChange / FileUpdateChange /
# PatchChangeKind types that drifted from the wire shape (#827).
codex-codes = { workspace = true }

# Yew framework
yew = { workspace = true }
yew-router = { workspace = true }

# WASM bindings
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

# Web APIs
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "DomRect",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Location",
    "Storage",
    "Navigator",
    "ServiceWorkerContainer",
    "Clipboard",
    "File",
    "FileList",
    "Blob",
    # Audio APIs for ADSR synthesis (voice input uses Web Speech API directly via js-sys)
    "AudioContext",
    "AudioContextState",
    "OscillatorNode",
    "OscillatorType",
    "GainNode",
    "AudioDestinationNode",
    "AudioParam",
    "KeyboardEvent",
    "ClipboardEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "DragEvent",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "ScrollToOptions",
] }

# Utility libraries for WASM
gloo = { workspace = true }
gloo-net = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging in WASM
wasm-logger = "0.2"
log = "0.4"

# Async utilities for WASM
futures-util = "0.3"
futures-channel = "0.3"
uuid = { workspace = true }
chrono = { workspace = true, features = ["wasmbind"] }
js-sys = "0.3.83"
pulldown-cmark = { version = "0.13.0", default-features = false }
ws-bridge = { workspace = true, features = ["yew-client"] }
base64 = "0.22"

[lints]
workspace = true
