[package]
name = "agent-portal"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "agent-portal"
path = "src/main.rs"

[dependencies]
# Shared types
shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
anyhow = { workspace = true }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true, features = ["std", "clock"] }
chrono-tz = "0.10"

# Cron expression parsing
croner = "3"
dirs = "6.0.0"
portal-auth = { path = "../portal-auth" }
session-lib = { path = "../session-lib" }
claude-session-lib = { path = "../claude-session-lib" }
codex-session-lib = { path = "../codex-session-lib" }
ws-bridge = { workspace = true, features = ["native-client"] }
portal-update = { path = "../portal-update" }
# rustls (not native-tls) so the released agent-portal binary doesn't link
# against system libssl — see proxy/Cargo.toml.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tokio-util.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
directories = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
