[package]
name = "portal-auth"
version.workspace = true
edition.workspace = true
description = "Device flow authentication for Claude Portal"

[dependencies]
anyhow = { version = "1" }
colored = "2.1"
hostname = "0.4"
# rustls (not native-tls) so the released claude-portal / agent-portal
# binaries don't link against system libssl — see proxy/Cargo.toml.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
