[package]
name = "portal-auth"
version.workspace = true
edition.workspace = true
description = "Device flow authentication for Claude Portal"

[dependencies]
anyhow = { workspace = true }
colored = "2.1"
hostname = { workspace = true }
# rustls (not native-tls) so the released claude-portal / agent-portal
# binaries don't link against system libssl — see proxy/Cargo.toml.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared" }
tokio = { workspace = true }
tracing = { workspace = true }
