[package]
name = "portal-update"
version.workspace = true
edition.workspace = true
description = "Self-update functionality for Claude Portal binaries"

[dependencies]
anyhow = { workspace = true }
hex = "0.4"
# rustls (not native-tls) so the released claude-portal / agent-portal
# binaries don't link against system libssl — see proxy/Cargo.toml.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { workspace = true }
sha2 = "0.10"
tracing = { workspace = true }

[lints]
workspace = true
