[package]
name = "claude-portal"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "claude-portal"
path = "src/main.rs"

[dependencies]
# Shared types
shared = { path = "../shared" }

# Claude Code integration
claude-codes = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Typed WebSocket client (connection comes from claude-session-lib's ws_bridge
# usage; this direct dep is for the error types in the shim reader).
ws-bridge = { workspace = true }

# Not used directly: enables the system native root store for the WebSocket
# client via feature union (ws-bridge only enables rustls-tls-webpki-roots).
# Use rustls instead of native-tls so the released binary doesn't link against
# system libssl — Ubuntu 20.04 ships OpenSSL 1.1 only, and our release
# binaries are built against OpenSSL 3, which crashes there.
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Environment variables
dotenvy = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID
uuid = { workspace = true }

# Hostname
hostname = { workspace = true }

# URL parsing
url = "2.5"

# HTTP client for pre-spawn backend session resolution
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }

# Config file management
directories = { workspace = true }

# Terminal colors
colored = "2.1"

# Time
chrono = { workspace = true, features = ["std", "clock"] }

# Self-update
portal-update = { path = "../portal-update" }
session-lib = { path = "../session-lib" }
claude-session-lib = { path = "../claude-session-lib" }
portal-auth = { path = "../portal-auth" }
base64 = "0.22"

# Unix system calls (for lock file process checking)
[target.'cfg(unix)'.dependencies]
libc = "0.2"
