[package]
name = "session-lib"
version.workspace = true
edition.workspace = true
description = "Agent-agnostic session management primitives (Agent trait, Session<A>, snapshot, buffer)."
license = "MIT"

[dependencies]
shared = { path = "../shared" }
# The cross-agent IoCommand / IoEvent / SessionEvent enums carry a handful of
# claude-codes types (ClaudeOutput, ControlResponse, PermissionSuggestion).
# Pulled in as types-only — no native async / tokio bits — so this stays
# agent-agnostic at the runtime level.
claude-codes = { workspace = true, features = ["async-client"] }
tokio = { workspace = true, features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
anyhow = { workspace = true }
directories = "5.0"
which = "8.0.0"
