[package]
name = "session-lib"
version.workspace = true
edition.workspace = true
description = "Agent-agnostic session management primitives (Agent trait, Session<A>, snapshot, buffer)."
license = "MIT"

[dependencies]
shared = { path = "../shared" }
# The cross-agent IoCommand / IoEvent / SessionEvent enums carry a handful of
# claude-codes types (ClaudeOutput, ControlResponse, PermissionSuggestion).
# Pulled in as types-only — no native async / tokio bits — so this stays
# agent-agnostic at the runtime level.
claude-codes = { workspace = true, features = ["async-client"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
which = "8.0.0"

# Unix-only: signal the agent's process group on stop/drop so the agent
# process can't be orphaned when `kill_on_drop` doesn't fire (#927).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
