[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Serialization - must be WASM compatible
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# Time handling (WASM-compatible with wasmbind)
chrono = { workspace = true, features = ["wasmbind"] }

# Claude Code types (WASM-compatible, no tokio — inherits types-only from workspace)
claude-codes = { workspace = true }

# Typed WebSocket endpoints (core traits only — WASM-safe, no features needed)
ws-bridge = { workspace = true }
base64 = "0.22"
