[package]
name = "agent-portal-mobile"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "agent_portal_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"

[lints]
workspace = true
