[package]
name = "agent-portal-mobile"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "agent_portal_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
shared = { path = "../../shared" }
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tokio = { workspace = true, features = ["time"] }

[lints]
workspace = true
